sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:17: error: type mismatch;
 found   : Unit
 required: (Integer, Integer)
  for (i <- 0 to getBasesAmount() - 1) {
         ^